addition on Navigation Bar and style changes

--- a/src/site/styles/styles.css
+++ b/src/site/styles/styles.css
@@ -1,10 +1,33 @@
+.topnavbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #00008B;
+    border-radius: 5px;
+}
+.topnavbar a.active {
+    background-color: #6495ED;
+    color: white;
+}
+
+li {
+    float: left;
+}
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #1434A4
+}
+
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    flex-direction: column;
-    height: 100vh;
+
 }
 
 #display_image{
