--- a/src/site/styles/styles.css
+++ b/src/site/styles/styles.css
@@ -1,3 +1,44 @@
+
+body {
+    background: rgb(255, 255, 255);
+}
+
+[data-tab-info] {
+    display: none;
+}
+
+
+
+.tab-content {
+    font-size: 15px;
+    font-family: 'Times New Roman', Serif,serif;
+    font-weight: bold;
+    color: rgb(75, 75, 75);
+}
+
+.tabs {
+    font-size: 40px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    margin: 0;
+}
+
+.active[data-tab-info] {
+    display: block;
+}
+
+.tabs span {
+    background: rgb(0, 0, 255);
+    padding: 10px;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+.tabs span:hover {
+    background: rgb(29, 185, 112);
+    cursor: pointer;
+    color: black;
+}
+
 .topnavbar {
     list-style-type: none;
     margin: 0;
@@ -7,6 +48,21 @@
     border-radius: 5px;
 }
 .topnavbar a.active {
+    background-color: #6495ED;
+    color: white;
+}
+
+.choiceBar {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 10%;
+    overflow: hidden;
+    background-color: #00008B;
+    border-radius: 5px;
+}
+.choiceBar a.active {
     background-color: #6495ED;
     color: white;
 }
