--- a/src/site/styles/styles.css
+++ b/src/site/styles/styles.css
@@ -94,3 +94,12 @@ body{
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+h4 {
+    font-size: 70px;
+    font-weight: 600;
+    background-image: linear-gradient(to left, #553c9a, #b393d3);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
